2005-03-08  Jordi Mas i Hernandez <jordi@ximian.com>

	* ScrollBar.cs
	  - Honors NewValue changes in Scroll events allowing apps to change it
	  - Adds First and Last Scroll events
	  - Fixes Thumb events

2005-03-07  Peter Bartok  <pbartok@novell.com>

	* Hwnd.cs: Added DefaultClientRectangle property
	* XplatUI.cs: Now using the X11 driver Where() method, which provides
	  more detailed debug information
	* XplatUIX11.cs: 
	  - Fixed size-change feedback loop, where we would pull an old size 
	    off the queue and mistakenly change our window's size to an 
	    earlier value
	  - Now compressing ConfigureNotify events, to reduce looping and 
	    redraw issues
	* TextBoxBase.cs: Preventing crash when no text is set and ToString()
	  is called

2005-03-07  Jackson Harper  <jackson@ximian.com>

	* Binding.cs: Push data pushes from data -> property. Check if the
	property is readonly when attempting to	set it.

2005-03-07  Jackson Harper  <jackson@ximian.com>

	* Binding.cs: Format and parse data correctly. Use ASsignableFrom
	instead of IsSubclassOf. Pulling data now sets the value on the
	control.
	* PropertyManager.cs:
	* CurrencyManager.cs: Just need to pull data when updating now,
	because PullData will set the value on the control.

2005-03-04  Jackson Harper  <jackson@ximian.com>

	* Binding.cs: Implement data type parsing and converting on pulled
	data. TODO: Are there more ways the data can be converted? 

2005-03-04  Jackson Harper  <jackson@ximian.com>

	* Binding.cs: Support <Property>IsNull checks. Also bind to the
	controls Validating method so we can repull the data when the
	control loses focus.

2005-03-03  Jordi Mas i Hernandez <jordi@ximian.com>

	* ColumnHeader.cs:
	  - Fixes null string format
	  
	* ListView.cs:
	  - Adds enum type checks
	  - Fixes redrawing and recalc need after changing some properties
	  - Fixes on focus_item set after the event
	  - Fixes adding columns after the control has been created
	  
	* ThemeWin32Classic.cs: